<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edff9d">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.issergeev.mathtools.MainActivity"
    android:layout_margin="@dimen/standard_margin">

   <EditText
       android:id="@+id/inputNumber"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="text"
       android:layout_marginBottom="@dimen/standard_margin"
       android:hint="@string/InputText"
       android:layout_alignParentTop="true"
       android:gravity="center"/>
   <RadioGroup
       android:id="@+id/Selector"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_above="@id/translateButton"
       android:checkedButton="@id/selectFL">
      <RadioButton
          android:id="@+id/manualI"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/RB1"/>
      <RadioButton
          android:id="@+id/selectFL"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/RB2"
          android:checked="true"/>
   </RadioGroup>
   <Spinner
       android:id="@+id/currentNS"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/layout_dimen"
       android:entries="@array/Digits"
       android:layout_below="@id/inputNumber">
   </Spinner>
   <Spinner
       android:id="@+id/newNS"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:entries="@array/Digits"
       android:layout_below="@id/currentNS">
   </Spinner>
   <EditText
       android:id="@+id/currentNSText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/layout_dimen"
       android:hint="@string/NSText1"
       android:inputType="number"
       android:layout_below="@id/inputNumber"
       android:visibility="gone"/>
   <EditText
       android:id="@+id/newNSText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/NSText2"
       android:inputType="number"
       android:layout_below="@id/currentNSText"
       android:visibility="gone"/>
   <Button
       android:id="@+id/translateButton"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_marginTop="5dp"
       android:text="@string/convert"
       android:background="@drawable/button_shape"/>
</RelativeLayout>
</LinearLayout>